# chatbot-demo-lesson-version

./: .gitignore  package.json  pnpm-lock.yaml
backend/: app.py  package.json  pyproject.toml
backend/src/: chatGpt.py  io.py  models.py  response.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  schema.ts
frontend/actions/: chat.ts
frontend/app/: page.tsx
