[tool.poetry]
name = "sep-boil"
version = "0.1.0"
description = ""
authors = ["Farouk Charkas <farouk.charkas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.50.2"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
